interpreter/tests/test_files/pos/test_stk.s
    storeU stk 0 42
    storeU stk 0 pc
    halt
