interpreter/tests/test_files/neg/bad_loadU.s
    storeU stk 0 1
    loadU r0 stk 0
    halt
